# Tetris

./: .gitignore  CMakeLists.txt  README.md  init.ps1  xmake.lua
docs/: basic.md  game.md  main.md
src/: basic.hpp  game.hpp  main.cpp
